# gitflex

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: gitflex.h
src/: gitflex_impl.c
tests/: test_gitflex.c  test_runner.c
